All_Component_DX/force-app/main/default/objects/SM_Change_Order_Parts__c/SM_Change_Order_Parts__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Change Order Required Parts object is a junction object between the Change Order object and the Product Object. It connects any parts required for an FCO to the Change Order record.</description>
    <label>Change Order Required Parts</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Order Required Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>