All_Component_DX/force-app/main/default/objects/SM_Change_Order_Parts__c/fields/SM_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Change_Order__c</fullName>
    <description>This field is used to associate Change Order Required Parts with Change Order.</description>
    <inlineHelpText>This field is used to associate Change Order Required Parts with Change Order.</inlineHelpText>
    <label>Change Order</label>
    <referenceTo>SM_Change_Order__c</referenceTo>
    <relationshipLabel>Change Order Required Parts</relationshipLabel>
    <relationshipName>SM_Change_Order_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>