All_Component_DX/force-app/main/default/objects/SM_Change_Order_Parts__c/fields/SM_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate Change Order Required Parts with Product.</description>
    <inlineHelpText>This field is used to associate Change Order Required Parts with Product.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Change Order Required Parts</relationshipLabel>
    <relationshipName>Change_Order_Required_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>