All_Component_DX/force-app/main/default/objects/SM_Change_Order_Parts__c/fields/SM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SM_Quantity__c</fullName>
    <description>This field is used to capture the quantity of Change Order Required Parts.</description>
    <inlineHelpText>This field is used to capture the quantity of Change Order Required Parts.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>